Small fix for too long titles of groups in listing view.

--- a/css/style.css
+++ b/css/style.css
@@ -5906,6 +5906,8 @@ body {
   body p {
     color: #000000;
     font-weight: 300; }
+  body .product-list__title a {
+    word-wrap: break-word; }
 
 @media screen and (min-width: 768px) {
   .navbar.container {
